tests/miniJava/neg/003054_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = while new java ( ) ; } }
